tests/fixtures/fail/infer_unsupported_probe.sali
let identity(T: type)(move value: T): T = value

let main(): i32 = {
  identity(_)(do { let value = 42; value });
  42
}
